<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quiz_app.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/agua_v" />

            <LinearLayout
                android:id="@+id/linearLayout_quiz"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/space_M"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editText_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/space_S"
                    android:hint="@string/hint_name_editText"
                    android:paddingBottom="@dimen/space_S"
                    style="@style/AppTheme"
                    android:textSize="@dimen/font_size_title" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/space_XS"
                    android:paddingTop="@dimen/space_S"
                    android:text="@string/question_1"
                    style="@style/AppTheme"
                    android:textSize="@dimen/font_size_title" />

                <RadioGroup
                    android:id="@+id/radioGroup_q1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/space_S">

                    <RadioButton
                        android:id="@+id/rB_1a"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        style="@style/AppTheme"
                        android:text="@string/answer_1a" />

                    <RadioButton
                        android:id="@+id/rB_1b"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        style="@style/AppTheme"
                        android:text="@string/answer_1b"/>

                    <RadioButton
                        android:id="@+id/rB_1c"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        style="@style/AppTheme"
                        android:text="@string/answer_1c"/>
                </RadioGroup>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/space_XS"
                    android:paddingTop="@dimen/space_S"
                    android:text="@string/question_2"
                    style="@style/AppTheme"
                    android:textSize="@dimen/font_size_title" />

                <RadioGroup
                    android:id="@+id/radioGroup_q2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/space_S">

                    <RadioButton
                        android:id="@+id/rB_2a"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/answer_2a"
                        style="@style/AppTheme"/>

                    <RadioButton
                        android:id="@+id/rB_2b"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/answer_2b"
                        style="@style/AppTheme"/>

                    <RadioButton
                        android:id="@+id/rB_2c"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/answer_2c"
                        style="@style/AppTheme"/>
                </RadioGroup>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/space_XS"
                    android:paddingTop="@dimen/space_S"
                    android:text="@string/question_3"
                    style="@style/AppTheme"
                    android:textSize="@dimen/font_size_title" />

                <RadioGroup
                    android:id="@+id/radioGroup_q3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/space_S">

                    <RadioButton
                        android:id="@+id/rB_3a"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/answer_3a"
                        style="@style/AppTheme" />

                    <RadioButton
                        android:id="@+id/rB_3b"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/answer_3b"
                        style="@style/AppTheme" />

                    <RadioButton
                        android:id="@+id/rB_3c"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/answer_3c"
                        style="@style/AppTheme" />
                </RadioGroup>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/space_XS"
                    android:paddingTop="@dimen/space_S"
                    android:text="@string/question_4"
                    style="@style/AppTheme"
                    android:textSize="@dimen/font_size_title" />

                <RadioGroup
                    android:id="@+id/radioGroup_q4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/space_S">

                    <RadioButton
                        android:id="@+id/rB_4a"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/answer_4a"
                        style="@style/AppTheme" />

                    <RadioButton
                        android:id="@+id/rB_4b"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/answer_4b"
                        style="@style/AppTheme" />

                    <RadioButton
                        android:id="@+id/rB_4c"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/answer_4c"
                        style="@style/AppTheme" />
                </RadioGroup>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/space_XS"
                    android:paddingTop="@dimen/space_S"
                    android:text="@string/question_5"
                    style="@style/AppTheme"
                    android:textSize="@dimen/font_size_title" />

                <RadioGroup
                    android:id="@+id/radioGroup_q5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/space_S">

                    <RadioButton
                        android:id="@+id/rB_5a"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/answer_5a"
                        style="@style/AppTheme" />

                    <RadioButton
                        android:id="@+id/rB_5b"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/answer_5b"
                        style="@style/AppTheme" />

                    <RadioButton
                        android:id="@+id/rB_5c"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/answer_5c"
                        style="@style/AppTheme" />
                </RadioGroup>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/space_XS"
                    android:paddingTop="@dimen/space_S"
                    android:text="@string/question_6"
                    style="@style/AppTheme"
                    android:textSize="@dimen/font_size_title" />

                <RadioGroup
                    android:id="@+id/radioGroup_q6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/space_S">

                    <RadioButton
                        android:id="@+id/rB_6a"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/answer_6a"
                        style="@style/AppTheme"/>

                    <RadioButton
                        android:id="@+id/rB_6b"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/answer_6b"
                        style="@style/AppTheme"/>

                    <RadioButton
                        android:id="@+id/rB_6c"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/answer_6c"
                        style="@style/AppTheme" />
                </RadioGroup>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/space_XS"
                    android:paddingTop="@dimen/space_S"
                    android:text="@string/question_7"
                    style="@style/AppTheme"
                    android:textSize="@dimen/font_size_title" />

                <CheckBox
                    android:id="@+id/checkBox_7a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_S"
                    android:text="@string/answer_7a"
                    style="@style/AppTheme" />

                <CheckBox
                    android:id="@+id/checkBox_7b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_S"
                    android:text="@string/answer_7b"
                    style="@style/AppTheme"/>

                <CheckBox
                    android:id="@+id/checkBox_7c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_S"
                    android:text="@string/answer_7c"
                    style="@style/AppTheme" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_M"
                    android:onClick="check"
                    android:paddingLeft="@dimen/space_S"
                    android:text="@string/button_check" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
